# ElectronicaProgramable_ESP32

./: README.md
documentación/: compilación.md  depuración.md  instalación.md
firmware/: EProgramable.code-workspace  EProgramable_C6.code-workspace
firmware/drivers/: CMakeLists.txt
firmware/drivers/devices/inc/: hc_sr04.h  lcditse0803.h  led.h  neopixel_stripe.h  switch.h  ws2812b.h
firmware/drivers/devices/src/: hc_sr04.c  lcditse0803.c  led.c  neopixel_stripe.c  switch.c
firmware/drivers/microcontroller/inc/: delay_mcu.h  gpio_mcu.h
firmware/drivers/microcontroller/src/: gpio_mcu.c  timer_mcu.c
firmware/projects/0_blinking/main/: 0_blinking.c
firmware/projects/1_blinking_switch/main/: 1_blinking_switch.c
firmware/projects/x_template/main/: x_template.c
